--- a/Repo Website/Web.config
+++ b/Repo Website/Web.config
@@ -8,9 +8,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-localhost-b9f96a31-7aaf-4ebd-a2b7-e988c30cb684;AttachDbFilename=|DataDirectory|\aspnet-localhost-b9f96a31-7aaf-4ebd-a2b7-e988c30cb684.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <connectionStrings configSource="WebConnectionStrings.config" />
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
